--- a/web/modules/custom/bda_hello/bda_hello.permissions.yml
+++ b/web/modules/custom/bda_hello/bda_hello.permissions.yml
@@ -5,3 +5,7 @@ view latest news page:
 add news:
   title: 'Add news for moderators'
   description: 'Add news for moderators.'
+
+add publish date:
+  title: 'Add news publish date'
+  description: 'Add/update news publish date'
