xdebug, hook entity access

--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,6 @@ DB_USER = root
 DB_PASS = example
 DB_HOST = database
 DB_PORT = 3306
+
+PHP_IDE_CONFIG="serverName=drupal"
+PHP_XDEBUG_IDE_KEY=PHPSTORM
